--- a/chat.html
+++ b/chat.html
@@ -46,18 +46,21 @@
         </div>
     </div>
 </div>
-
 <!-- Modal for Map Location -->
 <div id="map-modal" class="fixed inset-0 flex items-center justify-center bg-gray-600 bg-opacity-50 hidden">
-    <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 sm:w-1/2 md:w-1/3 lg:w-1/4 text-center">
+    <div class="bg-white p-6 rounded-lg shadow-lg w-full sm:w-3/4 md:w-1/2 lg:w-1/3 xl:w-1/4 text-center">
         <h3 class="text-lg font-semibold text-gray-800">Shop Location</h3>
         <p class="text-sm text-gray-600 mt-2">Here is the map showing our shop location:</p>
-        <div class="mt-4">
-            <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="mt-4 relative w-full" style="height: 400px; overflow: hidden;">
+            <!-- Google Maps Embed using provided URL -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.080097295414!2d77.27031627451098!3d28.65732028295638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd3321fe2743%3A0xe98c382c1fa3dc76!2sGolden%20Tree%20Garments%20-%20Men%E2%80%99s%20Clothing%20Shop%20%26%20Coat%20Pant%2C%20Blazer%20For%20Men!5e0!3m2!1sen!2sin!4v1743678426011!5m2!1sen!2sin" 
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <button id="close-map-btn" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-md hover:bg-gray-400 focus:outline-none mt-4">Close</button>
+        <button id="close-map-btn" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-md hover:bg-gray-400 focus:outline-none mt-4 w-full sm:w-auto">Close</button>
     </div>
 </div>
+
+
 
 <script>
 // Chat UI Management using JavaScript
