--- a/experience_chatbot_kd.html
+++ b/experience_chatbot_kd.html
@@ -54,7 +54,7 @@
       <div class="swiper-wrapper">
         <!-- Slide 1 -->
         <div class="swiper-slide">
-          <img src="/img/header_chatbot.png" alt="Project 1">
+          <img src="https://krishnadua.github.io/golden_tree_garment_chatbots/img/header_chatbot.png" alt="Project 1">
         </div>
         <!-- Slide 2 -->
         <div class="swiper-slide">
