--- a/experience_chatbot_kd.html
+++ b/experience_chatbot_kd.html
@@ -58,15 +58,15 @@
         </div>
         <!-- Slide 2 -->
         <div class="swiper-slide">
-          <img src="/img/footer_chatbot.png" alt="Project 2">
+          <img src="https://krishnadua.github.io/golden_tree_garment_chatbots/img/footer_chatbot.png" alt="Project 2">
         </div>
         <!-- Slide 3 -->
         <div class="swiper-slide">
-          <img src="/img/chatbot_body.png" alt="Project 3">
+          <img src="https://krishnadua.github.io/golden_tree_garment_chatbots/img/chatbot_body.png" alt="Project 3">
         </div>
         <!-- Slide 4 -->
         <div class="swiper-slide">
-          <img src="/img/main_chatbot.png" alt="Project 4">
+          <img src="https://krishnadua.github.io/golden_tree_garment_chatbots/img/main_chatbot.png" alt="Project 4">
         </div>
       </div>
 
